--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 node_modules
+.pnp
+.pnp.js
+
+converage
+
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.next
+.idea
+
+/build
+
+npm_debug.log
+yarn-debug.log
+yarn-error.log
