--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0",
     "next": "^8.0.0",
+    "nprogress": "^0.2.0",
     "proptypes": "^1.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
