--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "proptypes": "^1.1.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-select": "^2.4.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
