--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.0.1",
     "immutability-helper": "^2.9.0",
     "jquery": "^3.3.1",
@@ -37,6 +38,7 @@
     "nprogress": "^0.2.0",
     "proptypes": "^1.1.0",
     "react": "^16.8.1",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
     "react-select": "^2.4.1",
     "styled-components": "^4.1.3"
