--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
     "react-select": "^2.4.1",
+    "react-toastify": "^4.5.2",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
