--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nprogress": "^0.2.0",
     "proptypes": "^1.1.0",
     "react": "^16.8.1",
+    "react-color": "^2.17.0",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
     "react-select": "^2.4.1",
