--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.0.1",
+    "chart.js": "^2.8.0",
     "immutability-helper": "^2.9.0",
     "jquery": "^3.3.1",
     "jsx-control-statements": "^3.2.8",
@@ -38,6 +39,7 @@
     "nprogress": "^0.2.0",
     "proptypes": "^1.1.0",
     "react": "^16.8.1",
+    "react-chartjs-2": "^2.7.5",
     "react-color": "^2.17.0",
     "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1",
@@ -53,6 +55,7 @@
     "eslint": "5.7.0",
     "eslint-config-airbnb": "15.0.1",
     "eslint-config-airbnb-base": "11.2.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-import-resolver-webpack": "0.8.3",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
@@ -61,7 +64,7 @@
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "lint-staged": "^3.6.1",
-    "stylelint": "9.6.0"
+    "stylelint": "^9.10.1"
   },
   "babel": {
     "env": {
