--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.1",
     "react-select": "^2.4.1",
+    "react-slick": "^0.24.0",
     "react-toastify": "^4.5.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
