--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,12 @@ converage
 .env.development.local
 .env.test.local
 .env.production.local
-.next
 .idea
-
-/build
 
 npm_debug.log
 yarn-debug.log
 yarn-error.log
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
