--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "react-dom": "^16.8.1",
     "react-select": "^2.4.1",
     "react-toastify": "^4.5.2",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "babel-plugin-jsx-control-statements": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
-    "babel-plugin-jsx-control-statements": "^4.0.0",
     "babel-plugin-styled-components": "1.8.0",
     "casual": "^1.5.19",
     "eslint": "5.7.0",
