--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
               "ssr": true,
               "displayName": true
             }
-          ]
+          ],
+          "jsx-control-statements"
         ]
       },
       "test": {
