--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "babel-eslint": "^10.0.1",
+    "babel-plugin-jsx-control-statements": "^4.0.0",
     "chart.js": "^2.8.0",
     "immutability-helper": "^2.9.0",
     "jquery": "^3.3.1",
@@ -29,8 +30,7 @@
     "react-dom": "^16.8.1",
     "react-select": "^2.4.1",
     "react-toastify": "^4.5.2",
-    "styled-components": "^4.1.3",
-    "babel-plugin-jsx-control-statements": "^4.0.0"
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
@@ -45,7 +45,7 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-jsx-control-statements": "^2.2.0",
     "eslint-plugin-react": "7.0.1",
-    "husky": "^1.3.1",
+    "husky": "^2.4.0",
     "jest": "^23.6.0",
     "lint-staged": "^3.6.1",
     "stylelint": "^9.10.1"
