--- a/.ebextensions/01_deployment.config
+++ b/.ebextensions/01_deployment.config
@@ -1,5 +1,5 @@
-container_commands:
-    01-install-dependencies:
-        command: "npm install"
-    02-build
-        command: "npm run-script build"
+option_settings:
+    aws:elasticbeanstalk:container:nodejs:
+        NodeCommand: "npm install"
+    aws:elasticbeanstalk:container:nodejs:
+        NodeCommand: "npm run-script build"
