lets try this again

--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,5 @@
-option_settings:
-    aws:elasticbeanstalk:container:nodejs:
-        NodeCommand: "npm install"
-    aws:elasticbeanstalk:container:nodejs:
-        NodeCommand: "npm run-script build"
+commands:
+    01_node_install:
+        command: 'npm install'
+    02_node_build:
+        command: 'npm run-script build'
