added check for node modules

--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,13 @@
 commands:
-    01_node_install:
+    01_install_node:
+        # run this command from /tmp directory
+        cwd: /tmp
+        # don't run the command if node is already installed (file /usr/bin/node exists)
+        test: '[ ! -f /usr/bin/node ] && echo "node not installed"'
+        # install from epel repository
+        # flag -y for no-interaction installation
+        command: 'yum install -y nodejs --enablerepo=epel'
+    02_node_install:
         command: 'npm install'
-    02_node_build:
+    03_node_build:
         command: 'npm run-script build'
