--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -2,4 +2,4 @@ commands:
     01_node_install:
         command: 'npm install'
     02_node_build:
-        command: 'npm run-script build'
+        command: 'npm run build'
