--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,7 @@
 commands:
     01_node_install:
         command: 'npm install'
-    02_node_build:
+    02_node_create_dir:
+        command: 'mkdir .next'
+    03_node_build:
         command: 'npm run build'
