--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -4,4 +4,4 @@ commands:
     02_node_create_dir:
         command: 'mkdir .next'
     03_node_build:
-        command: 'npm run build'
+        command: 'sudo npm run build'
