here we go again

--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,5 @@
-commands:
-    01_node_install:
-        command: 'npm install'
-    02_node_build:
-        command: 'sudo npm run build'
+option_settings:
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm install"
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm run build"
