cha cha changes

--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,9 @@
-option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm install"
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm run build"
+commands:
+    00_change_permissions:
+        command: chmod 777 /var/www/ondeck
+    01-cd-to-dir:
+        command: cd /var/www/ondeck
+    02_node_install:
+        command: 'npm install'
+    03_node_build:
+        command: 'sudo npm run build'
