--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,6 +1,6 @@
 commands:
     00_change_permissions:
-        command: chmod 777 /var/www/ondeck
+        command: chmod - R 770 /var/www/ondeck
     01-cd-to-dir:
         command: cd /var/www/ondeck
     02_node_install:
