--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,9 +1,5 @@
 commands:
-    00_change_permissions:
-        command: chmod - R 770 /var/www/ondeck
-    01-cd-to-dir:
-        command: cd /var/www/ondeck
-    02_node_install:
+    01_node_install:
         command: 'npm install'
-    03_node_build:
-        command: 'sudo npm run build'
+    02_node_build:
+        command: 'npm run build'
