changed the deployment stuff

--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,9 @@
 commands:
-    01_node_install:
+    00_change_permissions:
+        command: chmod 777 /var/www/ondeck
+    01-cd-to-dir:
+        command: cd /var/www/ondeck
+    02_node_install:
         command: 'npm install'
-    02_node_build:
-        command: 'npm run build'
+    03_node_build:
+        command: 'sudo npm run build'
