--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,7 +1,5 @@
-commands:
-    01-cd-to-dir:
-        command: cd /var/www/ondeck
-    02_node_install:
-        command: 'npm install'
-    03_node_build:
-        command: 'sudo npm run build'
+option_settings:
+  aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "npm install"
+  aws:elasticbeanstalk:container:nodejs:
+      NodeCommand: "npm run build"
