make dir writable

--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,5 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:container:nodejs:
+    NodeCommand: "chmod -R 770 .next"
+  aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm install"
   aws:elasticbeanstalk:container:nodejs:
       NodeCommand: "npm run build"
