--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -5,3 +5,12 @@ option_settings:
     NodeCommand: "npm install"
   aws:elasticbeanstalk:container:nodejs:
       NodeCommand: "npm run build"
+
+files:
+  "/opt/elasticbeanstalk/hooks/appdeploy/post/00_set_tmp_permissions.sh":
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      #!/usr/bin/env bash
+      chown -R nodejs:nodejs /tmp
