--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,16 +1,6 @@
-option_settings:
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "chmod -R 770 .next"
-  aws:elasticbeanstalk:container:nodejs:
-    NodeCommand: "npm install"
-  aws:elasticbeanstalk:container:nodejs:
-      NodeCommand: "npm run build"
-
-files:
-  "/opt/elasticbeanstalk/hooks/appdeploy/post/00_set_tmp_permissions.sh":
-    mode: "000755"
-    owner: root
-    group: root
-    content: |
-      #!/usr/bin/env bash
-      chown -R nodejs:nodejs /tmp
+container-commands:
+  01_npm_install:
+    command: npm install
+    leader_only
+  02_npm_build:
+    command: npm run build
