--- a/.ebextensions/nodecommand.config
+++ b/.ebextensions/nodecommand.config
@@ -1,6 +1,6 @@
 container-commands:
   01_npm_install:
     command: npm install
-    leader_only
+    leader_only: true
   02_npm_build:
     command: npm run build
