--- a/.ebextensions/00_env.config
+++ b/.ebextensions/00_env.config
@@ -1,4 +1,10 @@
 container_commands:
+  00_file_permissions:
+    command: |
+       chmod -R 770 /var/app/ondeck/[path]
   01_npm_install:
     command: npm install
+    leader_only: true
+  02_npm_build:
+    command: npm run build
     leader_only: true
