--- a/.ebextensions/00_env.config
+++ b/.ebextensions/00_env.config
@@ -1,7 +1,7 @@
 container_commands:
   00_file_permissions:
     command: |
-       chmod -R 770 /var/app/ondeck/[path]
+       chmod -R 770 /var/app/ondeck/.next
   01_npm_install:
     command: npm install
     leader_only: true
