--- a/.ebextensions/00_env.config
+++ b/.ebextensions/00_env.config
@@ -1,10 +1,9 @@
 container_commands:
-  00_file_permissions:
-    command: |
-       chmod -R 770 /var/app/ondeck/.next
   01_npm_install:
     command: npm install
+    cwd: var/app/ondeck
     leader_only: true
   02_npm_build:
     command: npm run build
+    cwd: var/app/ondeck
     leader_only: true
