--- a/.ebextensions/00_env.config
+++ b/.ebextensions/00_env.config
@@ -1,9 +1,9 @@
 container_commands:
   01_npm_install:
     command: npm install
-    cwd: var/app/ondeck
+    cwd: var/app/current
     leader_only: true
   02_npm_build:
     command: npm run build
-    cwd: var/app/ondeck
+    cwd: var/app/current
     leader_only: true
