converted the navigation to use a json object instead of an array

--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
               "ssr": true,
               "displayName": true
             }
-          ]
+          ],
+          "jsx-control-statements"
         ]
       },
       "test": {
