--- a/package.json
+++ b/package.json
@@ -6,7 +6,23 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "lint": "npm run lint:js",
+    "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
+    "lint:js": "npm run lint:eslint -- . ",
+    "lint:staged": "lint-staged",
+    "precommit": "lint-staged"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -51,7 +67,7 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-jsx-control-statements": "^2.2.0",
     "eslint-plugin-react": "7.0.1",
-    "husky": "^2.4.0",
+    "husky": "^2.4.1",
     "jest": "^23.6.0",
     "lint-staged": "^3.6.1",
     "stylelint": "^9.10.1"
