--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "chart.js": "^2.8.0",
+    "faker": "^4.1.0",
     "immutability-helper": "^2.9.0",
     "jquery": "^3.3.1",
     "jsx-control-statements": "^3.2.8",
@@ -52,7 +53,8 @@
     "react-smooth-dnd": "^0.11.0",
     "react-toastify": "^4.5.2",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-jest": "^23.6.0",
