--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-select": "^2.4.1",
     "react-slick": "^0.24.0",
     "react-smooth-dnd": "^0.11.0",
+    "react-sticky": "^6.0.3",
     "react-toastify": "^4.5.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
