fixed create-instructor api and fetchInstructorsApi

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
     "start": "NODE_ENV=production node server.js",
+    "build": "next build",
+    "buildnstart": "next build & next start",
+    "dev": "node server.js",
+    "test": "NODE_ENV=test jest --watch",
+    "eject": "react-scripts eject",
     "lint": "npm run lint:js",
     "lint:eslint": "eslint --ignore-path .gitignore --ignore-pattern internals/scripts",
     "lint:js": "npm run lint:eslint -- . ",
@@ -32,6 +35,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "chart.js": "^2.8.0",
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "immutability-helper": "^2.9.0",
     "jquery": "^3.4.1",
