--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "immutability-helper": "^2.9.0",
+    "immutable": "^4.0.0-rc.12",
     "jquery": "^3.4.1",
     "jsx-control-statements": "^3.2.8",
     "materialize-css": "^1.0.0",
@@ -57,6 +58,7 @@
     "react-smooth-dnd": "^0.11.0",
     "react-sticky": "^6.0.3",
     "react-toastify": "^4.5.2",
+    "reselect": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
