--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "react-smooth-dnd": "^0.11.0",
     "react-sticky": "^6.0.3",
     "react-toastify": "^4.5.2",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^4.1.3",
