--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "chart.js": "^2.8.0",
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "immutability-helper": "^2.9.0",
     "jquery": "^3.4.1",
