--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "faker": "^4.1.0",
     "immutability-helper": "^2.9.0",
     "immutable": "^4.0.0-rc.12",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.4.1",
     "jsx-control-statements": "^3.2.8",
     "materialize-css": "^1.0.0",
@@ -51,8 +52,9 @@
     "react-beautiful-dnd": "^11.0.4",
     "react-chartjs-2": "^2.7.5",
     "react-color": "^2.17.0",
-    "react-datepicker": "^2.5.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
+    "react-materialize": "^3.5.7",
     "react-select": "^2.4.1",
     "react-slick": "^0.24.0",
     "react-smooth-dnd": "^0.11.0",
