--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-color": "^2.17.0",
     "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.3",
     "react-select": "^2.4.1",
     "react-slick": "^0.24.0",
     "react-smooth-dnd": "^0.11.0",
