--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
     "react-materialize": "^3.5.7",
+    "react-redux": "^7.1.3",
     "react-select": "^2.4.1",
     "react-slick": "^0.24.0",
     "react-smooth-dnd": "^0.11.0",
