--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
+    "dev": "next",
     "build": "next build",
+    "start": "next start",
     "buildnstart": "next build & next start",
-    "dev": "node server.js",
     "test": "NODE_ENV=test jest --watch",
     "eject": "react-scripts eject",
     "lint": "npm run lint:js",
@@ -45,7 +45,7 @@
     "materialize-css": "^1.0.0",
     "mime": "^2.4.4",
     "moment": "^2.24.0",
-    "next": "^9.0.3",
+    "next": "^9.1.6",
     "nprogress": "^0.2.0",
     "proptypes": "^1.1.0",
     "react": "^16.8.6",
@@ -54,8 +54,8 @@
     "react-color": "^2.17.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.3",
     "react-materialize": "^3.5.7",
+    "react-redux": "^7.1.3",
     "react-select": "^2.4.1",
     "react-slick": "^0.24.0",
     "react-smooth-dnd": "^0.11.0",
