--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.4.1",
     "jsx-control-statements": "^3.2.8",
+    "jwt-decode": "^2.2.0",
     "materialize-css": "^1.0.0",
     "mime": "^2.4.4",
     "moment": "^2.24.0",
@@ -54,8 +55,8 @@
     "react-color": "^2.17.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.1.3",
     "react-materialize": "^3.5.7",
+    "react-redux": "^7.1.3",
     "react-select": "^2.4.1",
     "react-slick": "^0.24.0",
     "react-smooth-dnd": "^0.11.0",
