--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-slick": "^0.24.0",
     "react-smooth-dnd": "^0.11.0",
     "react-sticky": "^6.0.3",
+    "react-time-picker": "^3.9.0",
     "react-toastify": "^4.5.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
