--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
+    "aws-amplify-react": "^3.1.3",
     "babel-eslint": "^10.0.1",
     "babel-plugin-jsx-control-statements": "^4.0.0",
     "chart.js": "^2.8.0",
