--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "git.ignoreLimitWarning": true,
   "eslint.alwaysShowStatus": true,
-  "eslint.enable": false
+  "eslint.enable": false,
+  "prettier.printWidth": 100
 }
