--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-color": "^2.17.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-input-slider": "^5.1.6",
     "react-materialize": "^3.5.7",
     "react-pdfmake": "^0.2.0",
